# bcs-aesth-mmodal-retrieval

./: README.md  enviromeny.yml  not-intresting-parts.txt  pyproject.toml  requirement.md
src/: ImageUtilities.py  PreprocessingUtilities.py  TabularUtilities.py  TrainTestUtilities.py  TrainUtilities.py  main.py  main_euc_tabular.py  main_image.py  main_mlp_tabular.py  main_tabular.py  quick-check.py  resize.py  under-const-tab.py
